fixed disabled post button contrast issue

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -758,5 +758,5 @@ textarea {
 
 #subButton:disabled,
 #subButtonComm:disabled {
-  opacity: 0.3;
+  opacity: 0.78;
 }
